kalayalam name changed

--- a/assets/unit.html
+++ b/assets/unit.html
@@ -224,7 +224,7 @@
 
           <!-- kalayalam -->
           <div class="border p-3 m-3">
-            <h6>kalayalam</h6>
+            <h6>Kalayalam</h6>
             <div>
               <input
               required
@@ -232,7 +232,7 @@
                 name="kalayalamName"
                 class="form-control"
                 id="kalayalamName"
-                placeholder="kalayalam Name"
+                placeholder="Kalayalam Name"
               />
               <p class="error-message" id="kalayalamName-error"></p>
             </div>
