Caps of the name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div></div>
     <h3 class="mb-3 mt-3">Poonoor division</h3>
 
-    <a href="assets/sector.html" class="btn btn-primary">sector Data</a>
+    <a href="assets/sector.html" class="btn btn-primary">Sector Data</a>
     <a href="assets/unit.html" class="btn btn-success">Unit Data</a>
             
     </div>
